k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ai-resume-analyzer

spec:
  type: ClusterIP
  selector:
    app: frontend

  ports:
  - port: 8501
    targetPort: 8501
    protocol: TCP
