k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: ai-resume-analyzer-ingress
  namespace: ai-resume-analyzer

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /stcore/health
    alb.ingress.kubernetes.io/tags: Project=AI-Resume-Analyzer,Environment=Dev

spec:
  ingressClassName: alb 

  rules: 
    - http: 
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service
                port:
                  number: 8501
